[gd_scene load_steps=11 format=3 uid="uid://bgbfej305hdie"]

[ext_resource type="Script" uid="uid://dgkmcbqo4dai5" path="res://Cenas/title_screen.gd" id="1_147ya"]
[ext_resource type="Texture2D" uid="uid://c51iifwy6x7qd" path="res://assets e sprites/Background/201da0ef717ed278eca911645dc3e0b2.jpg" id="1_rg7y1"]
[ext_resource type="Texture2D" uid="uid://cm2gbls4g1f8l" path="res://assets e sprites/Background/2ed91d36-f834-47d9-a09b-7450f58c7a26.png" id="2_in1uv"]
[ext_resource type="Texture2D" uid="uid://b2hhsc1ug4rfi" path="res://assets e sprites/Background/a5e46252-561d-4c17-83a6-712fb656d589.png" id="2_rg7y1"]
[ext_resource type="Theme" uid="uid://uefvu7jihsl7" path="res://Resources/CollisionShapes/title_screen.tres" id="3_848dy"]
[ext_resource type="AudioStream" uid="uid://cfrmqix6pt07k" path="res://assets e sprites/song/kids-game-gaming-background-music-295075.mp3" id="6_jtjwa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_147ya"]

[sub_resource type="Animation" id="Animation_147ya"]
resource_name = "reveal"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-610, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/HBoxContainer/cat:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jtjwa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/HBoxContainer/cat:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l05ng"]
_data = {
&"RESET": SubResource("Animation_jtjwa"),
&"reveal": SubResource("Animation_147ya")
}

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_147ya")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_rg7y1")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="musica_de_fundo" type="AudioStreamPlayer2D" parent="MarginContainer"]
position = Vector2(610, 0)
stream = ExtResource("6_jtjwa")
volume_db = -3.768

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="gamelogo" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_in1uv")

[node name="start_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_848dy")
theme_override_font_sizes/font_size = 35
text = "JOGAR"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_147ya")

[node name="credits_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_848dy")
theme_override_font_sizes/font_size = 35
text = "CREDITOS"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_147ya")

[node name="quit_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_848dy")
theme_override_font_sizes/font_size = 35
text = "SAIR DO JOGO"

[node name="cat" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("2_rg7y1")
expand_mode = 2

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_l05ng")
}
autoplay = "reveal"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/start_btn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/credits_btn" to="." method="_on_credits_btn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/quit_btn" to="." method="_on_quit_btn_pressed"]
